--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ header .header-button {
     text-transform: uppercase;
     font-size: 12px;
     border: 2px solid white;
+    transition: all 0.3s linear;
     
 }
 header .header-button:hover {
