--- a/style.css
+++ b/style.css
@@ -4,12 +4,18 @@
 
 
 }
+body {
+    position: relative;
+}
 img:not(.logo) {
     width: 100%;
   }
   img {
     display: block;
   }
+.hamburger-menu {
+    display: none;
+}
 header {
     height: 100vh;
     background: linear-gradient(rgba(63, 208, 212, 0.5), rgba(0, 0, 0, 0.7)), url(/hero-bcg.jpeg) no-repeat center/cover;
@@ -20,7 +26,7 @@ header .nav-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 80px;
+    min-height: 80px;
     width: 60%;
     margin-left: auto;
     margin-right: auto;
@@ -119,4 +125,46 @@ header .header-button:hover {
     height: 184px;
     letter-spacing: 2.5px;
     text-transform: capitalize;
+}
+
+@media (max-width:768px) {
+    .header-top {
+        background-color: white;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+   
+    header .nav-header {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content: left;
+        margin: 0 0 0px 10px;
+        padding: 0;
+        
+    
+        
+        
+    }
+    header .navbar ul {
+        flex-direction: column;
+        justify-content: start;
+        margin-right: auto;
+        margin-bottom: 16px;
+        
+    }
+    header .navbar ul a {
+        color: rgb(16, 62, 96);
+    }
+    
+
+    .hamburger-menu {
+        display: block;
+        position: absolute;
+        right: 50px;
+        top: 40px;
+    }
+    
+
 }
